added meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Love calculator helps to calculate compatibility between couples. Our love calculator shows you how well you fit together. Online love game. The Love Calculator provides a score from 0% to 100% 
+">
+    <meta name="keywords" content="love calculator, true love calculator, love calculator prank, true love calculator soulmate, love calculator flames, love calculator app, love calc, crush meter, love meter">
+    <meta name="author" content="KKN and Josh">
+    <meta property="og:url" content="https://hotappz.github.io/lovecalculator/" />
+    <meta property="og:image" content="assets/images/og-image.png" />
 
+    
     <!-- Bootstrap CSS -->
     <link rel="icon" href="assets/images/love_favicon.png" type="image/gif" sizes="16x16">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -12,6 +19,9 @@
     <script src="assets/js/liquidFillGauge.js" language="JavaScript"></script>
     <link href="https://fonts.googleapis.com/css?family=Laila:300,400,500,600,700" rel="stylesheet">
     <title>Love Calculator</title>
+    <!-- share social media -->
+    <script type='text/javascript' src='//platform-api.sharethis.com/js/sharethis.js#property=5c8354e29fbe5a0017077a96&product=sticky-share-buttons' async='async'></script>
+
     <style type="text/css">
       body{
         background: #16a358;
