facebook og image changed

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="love calculator, true love calculator, love calculator prank, true love calculator soulmate, love calculator flames, love calculator app, love calc, crush meter, love meter">
     <meta name="author" content="KKN and Josh">
     <meta property="og:url" content="https://hotappz.github.io/lovecalculator/" />
-    <meta property="og:image" content="assets/images/og-image.png" />
+    <meta property="og:image" content="assets/images/4k-wallpaper-close-up-colorful-1173576.jpg" />
 
     
     <!-- Bootstrap CSS -->
